# nrf5240-watch

./: CMakeLists.txt  LICENSE  app.overlay  prj.conf  readme.md
boards/nrf52840/nrf52840_watch/: Kconfig.defconfig  Kconfig.nrf52840_watch  board.yml  nrf52840_watch-pinctrl.dtsi  nrf52840_watch.dts  nrf52840_watch.yml  nrf52840_watch_defconfig
dts/bindings/: pwm-backlight.yaml
openocd-config/: nrf5340_evt_openocd.cfg  readme.md
src/: audio_file.h  bluetooth.c  main.c  radio.c  test_bmm350.c  test_bmm350.h  test_bmp390.c  test_button.c  test_codec.c  test_codec.h  test_flash.c  test_lcd.c  test_lsm6dso.c  test_motor.c  test_opt300.c  test_pmic.c  test_radio.c  test_systemoff.c
tools/: download.sh  flash.jlink  ft4232hq_get_power_consume.py  ft4232hq_get_uart_log.py
